# python-template-rustjswasm

./: .buildinfo  .copier-answers.yaml  .gitignore  Cargo.toml  Makefile  README.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.doctrees/: README.doctree  environment.pickle  index.doctree
.doctrees/.github/: CODE_OF_CONDUCT.doctree  pull_request_template.doctree
.doctrees/.github/ISSUE_TEMPLATE/: bug_report.doctree  feature_request.doctree  question.doctree
.doctrees/autoapi/: index.doctree
.doctrees/autoapi/python_template_rust/: index.doctree
.doctrees/autoapi/test_all/: index.doctree
.doctrees/docs/wiki/: Installation.doctree  _Footer.doctree  _Sidebar.doctree
.doctrees/docs/wiki/contribute/: Build-from-Source.doctree  Contribute.doctree  Local-Development-Setup.doctree
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yaml  docs.yaml
_sources/: index.md.txt
autoapi/python_template_rust/: index.html
autoapi/test_all/: index.html
docs/wiki/: Installation.html  _Footer.html  _Sidebar.html
docs/wiki/contribute/: Build-from-Source.html  Contribute.html  Local-Development-Setup.html
js/: Cargo.toml  build.mjs  package.json  pnpm-lock.yaml
js/src/html/: index.html
js/src/ts/: index.ts
rust/: Cargo.toml
rust/python/: lib.rs
rust/python/example/: mod.rs
