[package]
name = "python_template_rust_js"
version = "0.1.0"
edition = "2021"
publish = false
keywords = ["experimental"]
include = ["src/**/*", "Cargo.toml", "package.json"]

[lib]
name = "python_template_rust"
path = "src/rust/lib.rs"
crate-type = ["cdylib"]

[dependencies]
python_template_rust = { path = "../rust", version = "*" }
wasm-bindgen = "0.2.106"
